add loader for task list loading

--- a/backend/data/tasks.json
+++ b/backend/data/tasks.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": "a5ce2792-7ccb-4b20-8f33-d192e783b826",
+    "userId": "user-001",
+    "title": "Deployment",
+    "completed": false,
+    "createdAt": "2025-04-13T18:12:56.331Z"
+  }
+]
